2021-08-14  Allen D. Ball  <ball@hcf.dev>

	* Compile against Maven 3.8.2.

2021-08-03  Allen D. Ball  <ball@hcf.dev>

	* Started development of 1.1.0-SNAPSHOT.

2021-08-07  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/maven/plugins/javadoc/GenerateOptionsFileMojo.java:
	Added boolean <includeDependencyManagement/> configuration
	parameter (default: false).

	* src/main/java/ball/maven/plugins/javadoc/AbstractJavadocMojo.java:
	Added getDependencyManagementStream(MavenProject) method.

2021-08-03  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 1.1.0-SNAPSHOT.

2021-07-31  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.0.0.20210731.
